--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model HomeViewModel
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@await Html.PartialAsync("_Carousel")
+
+<h2>Os Preferidos da Semana</h2>
+<h4>Tá com fome???</h4>
+
+<div class="row">
+    @foreach(var lanche in Model.lanchesPreferidos)
+    {
+        @Html.Partial("_LanchesResumo", lanche)
+        
+    }
 </div>
