--- a/Views/Shared/_Carousel.cshtml
+++ b/Views/Shared/_Carousel.cshtml
@@ -1,32 +1,30 @@
-﻿<div class="row carousel-holder marginTop1">
-    <div class="col-md-12">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img class="slide-image" src="~/Images/carousel11.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img class="slide-image" src="~/Images/carousel12.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img class="slide-image" src="~/Images/carousel13.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img class="slide-image" src="~/Images/carousel14.jpg" alt="">
-                </div>
-            </div>
-            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+﻿
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="slide-image" src="~/Images/carousel11.jpg" alt="">
+        </div>
+        <div class="carousel-item">
+            <img class="slide-image" src="~/Images/carousel12.jpg" alt="">
+        </div>
+        <div class="carousel-item">
+            <img class="slide-image" src="~/Images/carousel13.jpg" alt="">
+        </div>
+        <div class="carousel-item">
+            <img class="slide-image" src="~/Images/carousel14.jpg" alt="">
         </div>
     </div>
+    <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
 </div>
+
