--- a/Views/Shared/_LanchesResumo.cshtml
+++ b/Views/Shared/_LanchesResumo.cshtml
@@ -7,7 +7,16 @@
         <h3 class="float-right">
             @Model.Preco.ToString("c")
         </h3>
-        <h4>@Model.Nome</h4>
+        <h4>
+            <a asp-controller="Lanche" asp-action="Details" asp-route-lancheId="@Model.LancheId">@Model.Nome</a>            
+        </h4>
         <p>@Model.DescricaoCurta</p>
+    </div>
+    <div class="addToCart text-right">
+        <p class="button ">
+            <a class="btn btn-primary" id="cartButton" asp-controller="CarrinhoCompra" asp-action="AdicionarItem" asp-route-lancheId="@Model.LancheId">
+                Inluir no Carrinho
+            </a>
+        </p>
     </div>
 </div>
