--- a/Views/Shared/Components/CarrinhoCompraResumo/Default.cshtml
+++ b/Views/Shared/Components/CarrinhoCompraResumo/Default.cshtml
@@ -4,7 +4,7 @@
 {
     <li>
         <a asp-controller="CarrinhoCompra">
-            <span class="glyphicon glyphicon-shopping-cart"></span>
+            <span class="fa fa-cart-plus"></span>
             <span id="cart-status">
                 @Model.CarrinhoCompra.CarrinhoCompraItens.Count
             </span>
