--- a/Views/CarrinhoCompra/Index.cshtml
+++ b/Views/CarrinhoCompra/Index.cshtml
@@ -23,7 +23,7 @@
                     <td class="text-right">
                         @((item.Quantidade * item.Lanche.Preco).ToString("c"))
                     </td>
-                    <td class="text-center"><a class="glyphicon glyphicon-remove text-danger remove" asp-controller="CarrinhoCompra" asp-action="RemoverItemDoCarrinhoCompra" asp-route-lancheId="@item.Lanche.LancheId"></a></td>
+                    <td class="text-center"><a asp-controller="CarrinhoCompra" asp-action="RemoverItem" asp-route-lancheId="@item.Lanche.LancheId">Remover</a></td>
                 </tr>
             }
         </tbody>
