--- a/Views/Pedido/Checkout.cshtml
+++ b/Views/Pedido/Checkout.cshtml
@@ -8,10 +8,10 @@
 
     <h3 class="text-center">Você está prestes a completar seu pedido</h3>
 
-    <form action="Checkout" method="post" class="form form-row">
+    <form action="Checkout" method="post" class="form form-text">
 
         <div class="form-group">
-            <label asp-for="Nome" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Nome"></label>
             <div class="col-md-5">
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Sobrenome" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Sobrenome"></label>
             <div class="col-md-5">
                 <input asp-for="Sobrenome" class="form-control" />
                 <span asp-validation-for="Sobrenome" class="text-danger"></span>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Endereco1" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Endereco1"></label>
             <div class="col-md-5">
                 <input asp-for="Endereco1" class="form-control" />
                 <span asp-validation-for="Endereco1" class="text-danger"></span>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Endereco2" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Endereco2"></label>
             <div class="col-md-5">
                 <input asp-for="Endereco2" class="form-control" />
                 <span asp-validation-for="Endereco2" class="text-danger"></span>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Cep" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Cep"></label>
             <div class="col-md-5">
                 <input asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Cidade" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Cidade"></label>
             <div class="col-md-5">
                 <input asp-for="Cidade" class="form-control" />
                 <span asp-validation-for="Cidade" class="text-danger"></span>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Estado" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Estado"></label>
             <div class="col-md-5">
                 <input asp-for="Estado" class="form-control" />
                 <span asp-validation-for="Estado" class="text-danger"></span>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Telefone" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Telefone"></label>
             <div class="col-md-5">
                 <input asp-for="Telefone" class="form-control" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Email" class="col-md-2 custom-control-label"></label>
+            <label asp-for="Email"></label>
             <div class="col-md-5">
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
