--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         </li>
                         @await Component.InvokeAsync("CarrinhoCompraResumo")
                     </ul>
+                    @await Html.PartialAsync("_LoginPartial")
                     <form class="navbar-nav" asp-controller="Lanche" asp-action="Search" method="get">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Procurar Lanche" name="searchString" value="@ViewData["searchString"]" />
