--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
                         </li>
-                        @await Component.InvokeAsync("CarrinhoCompraResumo")
+
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li><a asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a></li>
+                        }
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            @await Component.InvokeAsync("CarrinhoCompraResumo")
+                        }
+
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                     <form class="navbar-nav" asp-controller="Lanche" asp-action="Search" method="get">
