--- a/Views/Pedido/CheckoutCompleto.cshtml
+++ b/Views/Pedido/CheckoutCompleto.cshtml
@@ -1,30 +1,33 @@
 ﻿@model Pedido
-<br />
-@{
-    ViewData["Title"] = "CheckoutCompleto";
-}
 
-<br />
-<div class="container">
+<div class="container marginTop1">
+
     <div class="jumbotron">
-        <h2>@ViewBag.CheckoutCompletoMsg</h2>
+        <h2>@ViewBag.CheckoutCompletoMensagem</h2>
     </div>
     <div class="card">
         <div class="card-body">
-            <p>Cliente: <strong>@Model.Nome  </strong></p>
-            <p>Data do Pedido: <strong> @Model.PedidoEnviado </strong></p>
-            <p>Número do Pedido: <strong> @Model.PedidoId </strong></p>
-            <br />
-            @foreach(var item in Model.PedidoItens)
-            {
-                <img src = "@item.Lanche.ImagemUrl" width="40" height="40" />
-                <ul> @item.Lanche.Nome</ul>
-                <ul> @item.Quantidade</ul>
-                <ul> @item.Preco </ul>
-            }
-            <p>Valor Total: <strong> @(((decimal)ViewBag.TotalPedido).ToString("C2")) </strong></p>
+            <p>Cliente : <strong>@Model.Nome</strong>
+            <p>Data do Pedido :  <strong>@Model.PedidoEnviado</strong>
+            <p>Número do Pedido   : <strong>@Model.PedidoId</strong></p>
+            <table class="table">
+              <tr>
+                <th></th>
+                <th>Quantidade</th>
+                <th>Lanche</th>
+                <th>Preço</th>
+              </tr>
+              @foreach (var item in Model.PedidoItens)
+               {
+                 <tr>
+                   <td><img src="@item.Lanche.ImagemUrl" width="40" height="40" /></td>
+                   <td>@item.Quantidade</td>
+                   <td>@item.Lanche.Nome</td>
+                   <td>@item.Lanche.Preco</td>
+                  </tr>
+               }
+            </table>
+            <h4>Valor Total do Pedido: <strong>@(((decimal)ViewBag.TotalPedido).ToString("C2"))</strong></h4>
         </div>
     </div>
-
 </div>
-
