--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model HomeViewModel
 
-@await Html.PartialAsync("_Carousel")
+@*@await Html.PartialAsync("_Carousel")*@
+<partial name="_Carousel" />
 
-<h2>Os Preferidos da Semana</h2>
-<h4>Tá com fome???</h4>
+<h2>Os preferidos da semana </h2>
+<h4>Tá com fome ???</h4>
 
 <div class="row">
-    @foreach(var lanche in Model.lanchesPreferidos)
+    @foreach (var lanche in Model.LanchesPreferidos)
     {
-        @Html.Partial("_LanchesResumo", lanche)
-        
+        @*@Html.Partial("_LanchesResumo", lanche)*@
+        <partial name="_LanchesResumo" for="@lanche" />
     }
 </div>
