--- a/Views/Shared/_Carousel.cshtml
+++ b/Views/Shared/_Carousel.cshtml
@@ -1,30 +1,25 @@
-﻿
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+﻿<div id="carouselLanches" class="carousel slide marginTop1" data-ride="carousel">
     <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carouselLanches" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselLanches" data-slide-to="1"></li>
+        <li data-target="#carouselLanches" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="slide-image" src="~/Images/carousel11.jpg" alt="">
+            <img src="~/images/carousel11.jpg" class="d-block w-100" alt="Lanche">
         </div>
         <div class="carousel-item">
-            <img class="slide-image" src="~/Images/carousel12.jpg" alt="">
+            <img src="~/images/carousel12.jpg" class="d-block w-100" alt="Lanche">
         </div>
         <div class="carousel-item">
-            <img class="slide-image" src="~/Images/carousel13.jpg" alt="">
-        </div>
-        <div class="carousel-item">
-            <img class="slide-image" src="~/Images/carousel14.jpg" alt="">
+            <img src="~/images/carousel13.jpg" class="d-block w-100" alt="Lanche">
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
+    <a class="left carousel-control" href="#carouselLanches" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
-    <a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
+    <a class="right carousel-control" href="#carouselLanches" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
     </a>
 </div>
-
+  
