--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LanchesMac</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LanchesMac</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -17,34 +17,25 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        @await Component.InvokeAsync("CategoriaMenu")
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
-                        </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                       @await Component.InvokeAsync("CarrinhoCompraResumo");
+                    }
+                    <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    @await Component.InvokeAsync("CategoriaMenu")
+                    <a class="nav-link text-light" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
 
-                        @if (User.IsInRole("Admin"))
-                        {
-                            <li><a asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a></li>
-                        }
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a class="nav-link text-light" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
+                    }
 
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            @await Component.InvokeAsync("CarrinhoCompraResumo")
-                        }
-
-                    </ul>
-
-                    @await Html.PartialAsync("_LoginPartial")
-
-                    <form class="navbar-nav" asp-controller="Lanche" asp-action="Search" method="get">
+                    <form class="navbar-form navbar-right" asp-controller="Lanche" asp-action="Search" method="get">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Procurar Lanche" name="searchString" value="@ViewData["searchString"]" />
+                            <input type="text" class="form-control" placeholder="Procurar lanche" name="searchString" value="@ViewData["searchString"]">
                         </div>
                     </form>
+                    @await Html.PartialAsync("_LoginPartial")
                 </div>
             </div>
         </nav>
@@ -54,10 +45,9 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - LanchesMac - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - LanchesMac 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
