--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,5 +2,4 @@
 @using LanchesMac.Models
 @using LanchesMac.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper LanchesMac.TagHelpers*,LanchesMac
-
+@addTagHelper LanchesMac.TagHelpers.* , LanchesMac
