--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,7 +69,6 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
-
 #cartButton {
     margin-right: 8px;
 }
@@ -116,9 +115,14 @@ a.remove {
 }
 
 .formPullRightButton {
-    margin-right: 10px !important
+    margin-right: 10px; 
 }
 
 .carousel img {
     min-width: 100%;
+}
+
+.imageLanche {
+    height: 225px;
+    width: auto;
 }
