--- a/Views/Shared/_LanchesResumo.cshtml
+++ b/Views/Shared/_LanchesResumo.cshtml
@@ -2,7 +2,7 @@
 
    
         <div class="col-md-4 col-sm-4 col-lg-4">
-            <img src="~/images/carousel11.jpg" class="card-img-top imageLanche" alt="@Model.Nome" />
+            <img src=@Model.ImagemUrl class="card-img-top imageLanche" alt="@Model.Nome" />
             <div class="figure-caption">
                 <h4 class="formPullRightButton">@Model.Preco.ToString("c")</h4>
                 <h4>
